@@ -28,9 +28,9 @@
 		<setting id="contentorigin.menu" type="enum" subsetting="true" label="40419" lvalues="40420|40421|40422|40423" default="0" visible="eq(-1,true)"/>
 		<setting id="sep"/>
 		<setting id="perpage.bool" label="40466" type="bool" default="false"/>
-		<setting id="perpage.menu" type="slider" subsetting="true" label="40467" range="5,5,100" default="20" option="int" visible="eq(-1,true)"/>
+		<setting id="perpage.menu" type="slider" subsetting="true" label="40467" range="5,5,50" default="20" option="int" visible="eq(-1,true)"/>
 		<setting id="sep"/>
-		<setting id="context.delete.from.database" type="bool" label="Show Delete from Database in context menu" default="false" />
+		<setting id="context.delete.from.database" type="bool" label="40501" default="false" />
 
 		<!-- Artwork Customization -->
 		<setting type="lsep" label="40484"/>
@@ -433,10 +433,13 @@
 		<setting id="clear_history" type="action" label="30023" action="RunPlugin(plugin://plugin.video.otaku/clear_all_history)"/>
 		<setting id="rebuild_database" type="action" label="30026" action="RunPlugin(plugin://plugin.video.otaku/rebuild_database)"/>
 		<setting id="wipe_addon_data" type="action" label="30024" action="RunPlugin(plugin://plugin.video.otaku/wipe_addon_data)"/>
-		<setting type="lsep" label="Re-Use Language Invoker" />
-		<setting id="reuselanguageinvoker.toggle" label="Toggle Re-Use Language Invoker:    [COLOR red]Faster speeds but some instability![/COLOR]" type="action" option="close"
-			 action="RunPlugin(plugin://plugin.video.otaku/toggleLanguageInvoker)"/>
+
+		<!-- Language Invoker -->
+		<setting type="lsep" label="40502" />
+		<setting id="sep"/>
 		<setting id="reuselanguageinvoker.status" label="Re-Use Language Invoker Status: " type="text" default="Disabled" enable="false" />
+		<setting id="reuselanguageinvoker.toggle" label="40503" type="action" option="close" action="RunPlugin(plugin://plugin.video.otaku/toggleLanguageInvoker)"/>
+		
 		<!-- Overrides -->
 		<!-- <setting type="lsep" label="40474"/> -->
 		<!-- <setting id="sep"/> -->
